Added extra content and font changes

--- a/main.tex
+++ b/main.tex
@@ -112,12 +112,12 @@
     \subsection*{\fontspec{Muli-SemiBold.ttf} EDUCATION}
     \hline
     \vspace{1em}
-    \textbf{\fontspec{Raleway-SemiBold.ttf}\textsc{UNIVERSITY OF BRITISH COLOMBIA} \hfill \textbf{Expected, June 2022} \\
+    \textbf{\fontspec{Raleway-SemiBold.ttf}\textsc{University of British Colombia} \hfill \textbf{Expected, June 2022} \\
     Bachelor of Applied Science - Mechanical Engineering} \\
     Searching for Co-op Work Term 4/5 $|$ Availability: 4 mo.
     \vspace{1em}
     
-    \textbf{\fontspec{Raleway-SemiBold.ttf}\textsc{UNIVERSITY OF BRITISH COLOMBIA} \hfill \textbf{Ongoing} \\
+    \textbf{\fontspec{Raleway-SemiBold.ttf}\textsc{University of British Colombia} \hfill \textbf{Ongoing} \\
     Bachelor of Science - Combined Major: Physics, Life Science, Chemistry} \\
     \vspace{0.3em}
     
@@ -128,8 +128,38 @@
            \item Waves, Light and Fluids (91\%)
            \item Linear Algebra (96\%)
            \item Software Construction, Computation Models, Functional Programming (90\%+)
+       \end{itemize} \\ 
+       
+       
+    \subsection*{\fontspec{Muli-SemiBold.ttf} TECHNICAL PROJECTS}
+    \hline
+    \vspace{1em}
+    \fontspec{Raleway-SemiBold.ttf} Autonomous Mars Rover &|& \fontspec{Raleway-SemiBold.ttf} UBC Snowbots \hfill \textbf{September 2018 - Present}
+    \vspace{-0.5em}
+    \begin{itemize}
+    \fontspec{calibril.ttf}
+       \setlength\itemsep{-0.25em}
+           \item Proposed, spearheaded, devised strategies and designed a hybrid suspension system using engineering design principles, minimum constraint design, c-sketching, and Solidworks + Autodesk Fusion 360 CAD modelling
+           \item Prototyped, with four students, proof of concepts using machine shop and woodworking shop equipment, microcontrollers, and 3D printing, enforcing strict safety protocol to ensure team members avoid operation related injuries
+           \item Verified concept fragment feasibility through focused analytical prototypes on Solidworks Stress Studies and first principles in solid mechanics
+           \item Organized subprojects through functional decomposition, and assigned project tasks to group members
        \end{itemize}
        
+    Velocity Controlled Hovercraft &|& UBC  \hfill \textbf{April 2019 - April 2019}
+    \vspace{-0.5em}
+    \begin{itemize}
+    \fontspec{calibril.ttf}
+       \setlength\itemsep{-0.25em}
+           \item Designed, validated, and prototyped with two students, several scaled hovering mechanisms utilizing fluid mechanics, pressure principles, and dynamics, capable of supporting up to 700g of added mass
+           \item Conducted a focused analytical simulation model to determine hovercraft plenum heights at varying battery loads on Google Sheets
+           \item Completed a comprehensive final hovercraft prototype with six students to compete against 20 teams based on vehicle acceleration, velocity control, and predictability, achieved an NPV of 13.6\% more than the third ranked vehicle
+           \item Optimized motor mounts for mass savings, and assisted in chassis optimization via. space frame to reduce mass by 48\% 
+           \item Presented final prototype and recommendations to fictitious clients through a formal presentation
+       \end{itemize}
+       
+      \newpage
+      
+      
     
 \end{textbox}
 
